manifests/flask-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cnfl-scrap-service
spec:
  selector:
    app: cnfl-scrap-flask
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 5300
    - protocol: TCP
      port: 443
      name: https
      targetPort: 5300
  type: ClusterIP
